--- a/app/views/application/_top_bar.html.erb
+++ b/app/views/application/_top_bar.html.erb
@@ -20,7 +20,7 @@
 
             <strong class="top-bar__top-section">
                 <%= link_to current_user.name, user_path, :class => "top-bar__navbar-link" %>.
-                <% if current_user.is_admin_hack? %>
+                <% if current_user.is_site_admin? %>
                     <span class="top-bar__admin-label">er admin</span>
                 <% end %>
             </strong>
