Added som dropshadow

--- a/app/assets/stylesheets/_ad_location_map.scss
+++ b/app/assets/stylesheets/_ad_location_map.scss
@@ -1,6 +1,11 @@
 @import 'constants.scss';
 
 .ad-location-map {
+    $blur: 0px -2px 5px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: $blur;
+    -moz-box-shadow: $blur;
+    box-shadow: $blur;
+
     &__map {
         height: 400px;
     }
