Let users decide their Display Names

--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -10,8 +10,15 @@
 
                 <div class="row">
                     <div class="two-thirds column">
-                        <%= f.label :name, "Navn:" %>
-                        <%= f.text_field :name, autofocus: true %>
+                        <%= f.label :name, "FIXME: Display Navn:" %>
+                        <%= f.text_field :display_name, autofocus: true %>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="two-thirds column">
+                        <%= f.label :name, "FIXME: Fullt Navn:" %>
+                        <%= f.text_field :name %>
                     </div>
                 </div>
 
