--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -17,7 +17,14 @@
 
                     <div class="row">
                         <div class="six columns">
-                            <%= f.label :name, "Navn" %>
+                            <%= f.label :name, "FIXME: Display Navn" %>
+                            <%= f.text_field :display_name, class: "u-full-width" %>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="six columns">
+                            <%= f.label :name, "FIXME: Fullt Navn" %>
                             <%= f.text_field :name, class: "u-full-width" %>
                         </div>
                     </div>
