--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -40,8 +40,7 @@
     </div>
 
     <label class="u-push-down">
-        <!-- FIXME -->
-        <input type="checkbox">
+        <%= f.check_box :insurance_required %>
         <span class="label-body">
             Ja, leietaker må tegne <a href="#">forsikring</a> for å leie gjenstanden.
         </span>
