Hooked up date and time WIP fields for booking

--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -27,42 +27,18 @@
         <%= number_to_currency_pretty @booking.ad.price %> per dag
     </div>
 
-    <div class="field">
-        <%= f.label :booking_from %><br>
-        <%= f.datetime_select :booking_from %>
-    </div>
+    Jeg vil leie fra:
+    <%= f.date_field :booking_from_date, data: { format: "yyyy.MM.dd" } %>
 
-    <div class="field">
-        <%= f.label :booking_to %><br>
-        <%= f.datetime_select :booking_to %>
-    </div>
+    Hentes klokken:
+    <%= f.time_field :booking_from_time  %>
+    <br>
+    Jeg vil leie til:
 
-    <!-- Placeholder markup for nicer time selectors
-         we can try in the future.
-    <div class="row">
-        <div class="six columns">
-            <%= label_tag :start_date, "Leies fra og med dato" %>
-            <%= date_field :start_date, "", class: "u-full-width" %>
+    <%= f.date_field :booking_to_date, data: { format: "yyyy.MM.dd" } %>
+    Leveres klokken:
 
-        </div>
-        <div class="six columns">
-            <%= label_tag :pickup_time, "Hentes klokkeslett" %>
-            <%= time_field :pickup_time, "", class: "u-full-width" %>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="six columns">
-            <%= label_tag :end_date, "Leies til og med dato" %>
-            <%= date_field :end_date, "", class: "u-full-width" %>
-
-        </div>
-        <div class="six columns">
-            <%= label_tag :return_time, "Leveres klokkeslett" %>
-            <%= time_field :return_time, "", class: "u-full-width" %>
-        </div>
-    </div>
-    -->
+    <%= f.time_field :booking_to_time %>
 
     <div class="actions">
         <%= f.submit %>
