--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <strong>Location User:</strong>
-  <%= @location.user_id %> - <%= @location.user.name %>
+  <%= @location.user_id %> - <%= @location.user.safe_display_name %>
 </p>
 
 <p>
