--- a/app/views/ads/_search_result_item.html.erb
+++ b/app/views/ads/_search_result_item.html.erb
@@ -20,5 +20,5 @@
             <%= render('shared/stars.html', rating: Ad.find(ad.id).user.calculate_average_rating, small: true ) %>
         </div>
     </div>
-    <div class="search-result-item__price-floater"><%= number_to_currency_pretty ad.price %> per&nbsp;dag</div>
+    <div class="search-result-item__price-floater"><%= number_to_currency_pretty ad.price %><br>per&nbsp;dag</div>
 </div>
