Follow safe_ naming convention for avatar url

--- a/app/views/shared/_avatar.html.erb
+++ b/app/views/shared/_avatar.html.erb
@@ -24,4 +24,4 @@
       size = "medium"
     end
 %>
-<%= image_tag user.avatar_url_safetest, alt: "", class: "avatar--#{size} #{css_class}", size: size %>
+<%= image_tag user.safe_avatar_url, alt: "", class: "avatar--#{size} #{css_class}", size: size %>
