Use safe_ naming convention for image urls

--- a/app/views/ads/_search_result_item.html.erb
+++ b/app/views/ads/_search_result_item.html.erb
@@ -1,7 +1,7 @@
 <div class="search-result-item" data-adid="<%= ad.id %>">
     <%= link_to ad_path(ad.id), class: "search-result-item__link" do %>
         <div class="search-result-item__image-holder">
-            <%= image_tag Ad.find(ad.id).image_url_with_fallback(:searchresult), alt: "", class: "search-result-item__image" %>
+            <%= image_tag Ad.find(ad.id).safe_image_url(:searchresult), alt: "", class: "search-result-item__image" %>
         </div>
     <% end %>
     <%= link_to ad_path(ad.id), class: "search-result-item__link" do %>
