--- a/app/views/ads/_owned_ad_item.html.erb
+++ b/app/views/ads/_owned_ad_item.html.erb
@@ -2,7 +2,7 @@
     <h5><%= link_to( (ad.title || 'Ingen tittel'), edit_ad_path(ad) ) %></h5>
     <p>
         <%# fixme: set size here %>
-        <%= image_tag ad.image_url_with_fallback(:thumb), alt: "", class: "u-pull-right owned-ad-item__thumb" %>
+        <%= image_tag ad.safe_image_url(:thumb), alt: "", class: "u-pull-right owned-ad-item__thumb" %>
         <%= ad.body || "No body" %>
     </p>
     <p><%= ad.updated_at.to_formatted_s(:plendit_short_datetime) %> STATUS: <%= ad.status %></p>
