--- a/app/views/ads/_ad_status_bar.html.erb
+++ b/app/views/ads/_ad_status_bar.html.erb
@@ -1,15 +1,16 @@
 <% if user_signed_in? && (current_user.is_site_admin? || current_user == ad.user) %>
     <div class="ad-status-bar ad-status-bar--<%= ad.status %>">
         <% if ad.status == 'published' %>
-            Annonsen er aktiv. <a class="ad-status-bar__link" href="#ad-controls">Endre</a>
+            Annonsen er aktiv.
         <% elsif ad.status == 'draft' %>
-            Annonsen er under utarbeidelse. <a class="ad-status-bar__link" href="#ad-controls">Endre</a>
+            Annonsen er under utarbeidelse.
         <% elsif ad.status == 'waiting_review' %>
-            Annonsen er sendt til kontroll. <a class="ad-status-bar__link" href="#ad-controls">Endre</a>
+            Annonsen er sendt til kontroll.
         <% elsif ad.status == 'paused' %>
-            Annonsen er satt på pause. <a class="ad-status-bar__link" href="#ad-controls">Endre</a>
+            Annonsen er satt på pause.
         <% elsif ad.status == 'stopped' %>
-            Annonsen er stoppet. <a class="ad-status-bar__link" href="#ad-controls">Endre</a>
+            Annonsen er stoppet.
         <% end %>
+        <%= link_to "Endre", "#ad-controls", class: "ad-status-bar__link"%>
     </div>
 <% end %>
