--- a/app/views/ads/_ad_status_box.html.erb
+++ b/app/views/ads/_ad_status_box.html.erb
@@ -6,6 +6,7 @@
         <%= button_to 'Pause annonsen', pause_ad_path(ad), form_class: "ad-status-box__form", class: "ad-status-box__button ad-status-box__button--yellow" %>
         <%= button_to 'Stopp annonsen', stop_ad_path(ad), form_class: "ad-status-box__form", class: "ad-status-box__button ad-status-box__button--red" %>
     <% elsif ad.status == 'draft' %>
+        <%= button_to 'Rediger annonsen', edit_ad_path(ad), form_class: "ad-status-box__form", class: "ad-status-box__button ad-status-box__button--blue", method: :get %>
         <%= button_to 'Send til publisering', submit_for_review_ad_path(@ad), form_class: "ad-status-box__form", class: "ad-status-box__button ad-status-box__button--green" %>
     <% elsif ad.status == 'paused' %>
         <%= button_to 'Rediger annonsen', edit_ad_path(ad), form_class: "ad-status-box__form", class: "ad-status-box__button ad-status-box__button--blue", method: :get %>
