--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -2,12 +2,12 @@
 
 <div class="container">
     <div class="row">
-
-        <div class="nine columns">
+        <%= render partial: "shared/hero_image", locals: { ad: @booking.ad } %>
+        <div class="twelve columns">
+            <%= render partial: "shared/ad_title_box", locals: { ad: @booking.ad } %>
 
 <% if @booking.from_user == current_user %>
             <h3 class="u-push-down">Din forespørsel til <%= @booking.user.name %>.</h3>
-
             <%= render partial: "rental_request_box_renter", locals: {booking: @booking} %>
 <% else %>
 <!--
@@ -16,7 +16,6 @@
             <hr>
 -->
             <h3 class="u-push-down"><%= @booking.from_user.name %> ønsker å leie av deg</h3>
-
             <%= render partial: "rental_request_box_owner", locals: {booking: @booking} %>
 <% end %>
             <hr>
@@ -24,15 +23,5 @@
             <%= render partial: "conversation_section", locals: {booking: @booking} %>
 
         </div>
-        <div class="three columns">
-            <%= render partial: "shared/sent_requests_sidebar_box" %>
-            <%= render partial: "shared/received_requests_sidebar_box" %>
-        </div>
     </div>
 </div>
-
-
-<!--
-<%= link_to 'Edit', edit_booking_path(@booking) %> |
-<%= link_to 'Back', bookings_path %>
--->
