--- a/app/views/bookings/_rental_request_box.html.erb
+++ b/app/views/bookings/_rental_request_box.html.erb
@@ -14,37 +14,5 @@
             <%= render('shared/stars.html', rating: booking.user.calculate_average_rating, small: true ) %>
         </div>
     </div>
-    <table class="rental-request-box__table">
-        <tr>
-            <th class="rental-request-box__th">Hentes</th>
-            <td class="rental-request-box__td">
-                <%= booking.booking_from.to_formatted_s(:plendit_short_datetime) %>
-            </td>
-        </tr>
-        <tr>
-            <th class="rental-request-box__th">Leveres</th>
-            <td class="rental-request-box__td">
-                <%= booking.booking_to.to_formatted_s(:plendit_short_datetime) %>
-            </td>
-        </tr>
-
-        <% if defined? is_owner and is_owner %>
-            <tr class="rental-request-box__price-row">
-                <th class="rental-request-box__th">Utbetales til deg</th>
-                <td class="rental-request-box__td rental-request-box__price-cell"><%= number_to_currency_pretty booking.sum_paid_to_owner, unit: 'kr' %>*</td>
-            </tr>
-            <tr>
-                <td colspan="2" class="rental-request-box__caveats">
-                    * Totalpris kr <%= booking.sum_paid_by_renter %>,-
-                    minus 10% transaksjonskost. Totalt utbetalt til deg,
-                    <%= number_to_currency_pretty booking.sum_paid_to_owner, unit: 'kr' %>
-                </td>
-            </tr>
-        <% else %>
-            <tr class="rental-request-box__price-row">
-                <th class="rental-request-box__th">Din regning</th>
-                <td class="rental-request-box__td rental-request-box__price-cell"><%= number_to_currency_pretty booking.sum_paid_by_renter, unit: 'kr' %></td>
-            </tr>
-        <% end %>
-    </table>
+    <%= render partial: 'show_price', locals: { params: params } %>
 </div>
