Added timerange validation to avoid double booking. Renamed booking_from and booking_to to more intuitive names start_at and end_at for Bookings.

--- a/app/views/bookings/_show_price.html.erb
+++ b/app/views/bookings/_show_price.html.erb
@@ -2,13 +2,13 @@
     <tr>
         <th class="rental-request-box__th">Hentes</th>
         <td class="rental-request-box__td">
-            <%= @booking.booking_from.to_formatted_s(:plendit_short_datetime) %>
+            <%= @booking.starts_at.to_formatted_s(:plendit_short_datetime) %>
         </td>
     </tr>
     <tr>
         <th class="rental-request-box__th">Leveres</th>
         <td class="rental-request-box__td">
-            <%= @booking.booking_to.to_formatted_s(:plendit_short_datetime) %>
+            <%= @booking.ends_at.to_formatted_s(:plendit_short_datetime) %>
         </td>
     </tr>
 
