--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -27,7 +27,7 @@
         <%= number_to_currency_pretty @booking.ad.price %> per dag
     </div>
 
-    <%= render partial: "shared/booking_period_selector", locals: { form: f } %>
+    <%= render partial: "shared/booking_period_selector", locals: { form: f, ad: @booking.ad } %>
 
     <div class="actions">
         <%= f.submit %>
