--- a/app/views/bookings/_incoming_request_item.html.erb
+++ b/app/views/bookings/_incoming_request_item.html.erb
@@ -1,11 +1,12 @@
 <div class="incoming-request-item">
     <div class="row">
         <div class="two columns incoming-request-item__personalia">
-            <%= render('shared/avatar.html', user: booking.user, size: "large" ) %>
-            <p><%= booking.user.safe_display_name %></p>
+            <%= render('shared/avatar.html', user: booking.from_user, size: "large" ) %>
+            <p><%= booking.from_user.safe_display_name %></p>
         </div>
         <div class="ten columns">
-                <%= image_tag "ads/ad1/ad_image_1.jpg", alt: "", size: "160x100", class: "u-pull-right" %>
+            <%= image_tag booking.ad.safe_image_url(:thumb), alt: "", class: "u-pull-right" %>
+
             <h5><%= link_to booking.ad.title, booking_path(booking) %></h5>
             <p>
                 <%= booking.ad.summary %>
