--- a/app/views/shared/_personal_bar.html.erb
+++ b/app/views/shared/_personal_bar.html.erb
@@ -9,11 +9,11 @@
 
                     links = [
                         { text: "Kontrollpanel", path: users_path },
-                        { text: "Leiehistorikk", path: "#" },
                         { text: "Dine annonser", path: users_ads_path },
-                        { text: "Din profil", path: users_edit_path },
-                        { text: "Bytte passord", path: edit_user_registration_path },
-                        { text: "Dine Forespørsler", path: bookings_path }
+                        { text: "Dine forespørsler", path: bookings_path },
+                        { text: "Leiehistorikk", path: "#" },
+                        { text: "Din profil",    path: users_edit_path },
+                        { text: "Bytte passord", path: edit_user_registration_path }
                     ]
                     links.map { |e| e[:selected] = e[:text].downcase == selected.downcase }
                 %>
