--- a/app/views/favorite_ads/index.html.erb
+++ b/app/views/favorite_ads/index.html.erb
@@ -1,3 +1,5 @@
+<%= render partial: "shared/personal_bar", locals: { selected: "Dine favoritter annonser" } %>
+
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Favorite Ads</h1>
@@ -16,7 +18,7 @@
       <tr>
         <td><%= favorite_ad.favorite_list.name %></td>
         <td><%= link_to favorite_ad.ad.title, ad_path( favorite_ad.ad.id ) %></td>
-        <td><%= link_to 'Destroy', favorite_ad, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Remove', users_favorite_ad_path( favorite_ad.id ), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
