--- a/app/views/bookings/_rental_request_box_renter.html.erb
+++ b/app/views/bookings/_rental_request_box_renter.html.erb
@@ -1,14 +1,15 @@
 <%= render partial: "rental_request_box", locals: {booking: @booking, is_owner: false} %>
 
+<% if @booking.status == 'created' %>
+
 <div class="rental-request-buttons">
-    <%= link_to '#todo-implement-me' do -%>
-    <button class="rental-request-buttons__button rental-request-buttons__button--bad">
+    <%= button_to(booking_path, class: "rental-request-buttons__button rental-request-buttons__button--bad", method: "patch", params: { 'booking[status]' => 'cancelled' }) do -%>
         <%= image_tag("offer_reject.png", size: "25x25") %>
         <br>
         Avbryt
-    </button>
     <%- end %>
-    <%= link_to edit_booking_path(@booking) do%>
+
+    <%= link_to edit_booking_path(@booking) do %>
     <button class="rental-request-buttons__button rental-request-buttons__button--neutral">
         <%= image_tag("offer_edit.png", size: "25x25") %>
         <br>
@@ -17,3 +18,6 @@
     <% end %>
 </div>
 
+<% else %>
+        <br> But its an action has been taken already. No further action possible (?).
+<% end %>
