--- a/app/assets/stylesheets/_booking_price_summery.scss
+++ b/app/assets/stylesheets/_booking_price_summery.scss
@@ -1,10 +1,7 @@
 @import 'constants.scss';
 
-
 .booking-price-summary {
 
-
-    
     &__summary-row {
         border-top: 1px solid $color-box-border;
     }
@@ -15,3 +12,5 @@
     }
 }
 
+.booking-controls {
+}
