--- a/app/assets/stylesheets/_search_result_item.scss
+++ b/app/assets/stylesheets/_search_result_item.scss
@@ -19,7 +19,7 @@
         text-align: center;
         top: 12px;
         right: -6px;
-        width: 100px;
+        min-width: 100px;
         height: 46px;
         box-shadow: -3px 3px 5px 0px rgba(0,0,0,0.75);
         color: white;
@@ -27,6 +27,8 @@
         font-size: 16px;
         line-height: 18px;
         padding-top: 4px;
+        padding-left: 8px;
+        padding-right: 8px;
     }
 
     &__text-container {
