Use jbuilder for generationg json for search result

--- a/app/views/ads/search.html.erb
+++ b/app/views/ads/search.html.erb
@@ -72,7 +72,7 @@
 <div class="result-container" data-controller="resultContainerSizeAdjuster">
     <div class="result-container__map-box">
         <div class="result-map" data-controller="resultMap">
-            <script type="text/json" data-location-info><%= @location_info %></script>
+            <script type="text/json" data-location-info><%= @result_json %></script>
         </div>
     </div>
     <div class="result-container__hits-box" data-controller="resultList">
