a working facebook like / share button

--- a/app/views/application/_main_footer.html.erb
+++ b/app/views/application/_main_footer.html.erb
@@ -21,7 +21,7 @@
             <div class="four columns">
                 <h6 class="about-footer__title">Besøk oss på facebook</h6>
                 <ul class="about-footer__list">
-                    <li class="about-footer__list-item"><%= image_tag "facebook/FB-LikeButton-online-72.png", alt: "", size: "72x30" %></li>
+                    <li class="about-footer__list-item"><%= render partial: 'misc/facebook' %></li>
                 </ul>
             </div>
         </div>
