--- a/app/views/misc/_facebook.html.erb
+++ b/app/views/misc/_facebook.html.erb
@@ -17,4 +17,4 @@ fb_language = mylocales[I18n.locale] || 'nb_NO'
 }(document, 'script', 'facebook-jssdk'));
 </script>
 
-<div class="fb-like" data-href="https://www.facebook.com/pages/Plendit/1559588560950178" data-width="350" data-layout="standard" data-action="like" data-show-faces="false" data-share="true"></div>
+<div class="fb-like" data-href="https://www.facebook.com/pages/Plendit/1559588560950178" data-colorscheme="dark" data-width="350" data-layout="standard" data-action="like" data-show-faces="false" data-share="true"></div>
