Centralize global application constants

--- a/app/views/ads/_ad_input_copy.html.erb
+++ b/app/views/ads/_ad_input_copy.html.erb
@@ -4,7 +4,7 @@
 
     <p>
         Det er helt gratis å legge ut en annonse hos oss. Vi tar oss bare
-        betalt når du tjener penger, og aldri mer enn 10% av den totale leiesummen. 
+        betalt når du tjener penger, og aldri mer enn 10% av den totale leiesummen.
     </p>
 
     <h4>Verifisering</h4>
@@ -26,18 +26,18 @@
     <!-- fixme: clear fix -->
     <p>
         <%= image_tag "safety_check.png", alt: "", class: "ad-input-copy__badge", size: "41x69" %>
-        Alle ting du leier ut, er forsikret opp til kr 50.000,-
-        Les mer om din trygghet utleier <a href="#">her</a>.
+        Alle ting du leier ut, er forsikret opp til <%= Rails.configuration.x.insurance.max_insurance_value  %>
+        Les mer om din trygghet utleier <%= link_to "her", misc_wip_path %>.
     </p>
 
 
     <h4>Spørsmål?</h4>
     <p>
         Om du har noen spørsmål til tjenesten, ikke nøl med å ta kontakt
-         med oss på kundesenter@plendit.no
+         med oss på <%= Rails.configuration.x.customerservice.email %>
     </p>
     <p>
-        Du kan også lese <a href="#">ofte stilte spørsmål.</a>
+        Du kan også lese <%= link_to "ofte stilte spørsmål", misc_wip_path %>.
     </p>
 
 </section>
