--- a/app/views/misc/frontpage.html.erb
+++ b/app/views/misc/frontpage.html.erb
@@ -1,7 +1,7 @@
 
 <section class="front-search-block">
     <h1 class="front-search-block__title">LEI DET DU TRENGER</h1>
-    <p class="front-search-block__copy">og spar penger! Mer enn 500.000 ting til leie.</p>
+    <p class="front-search-block__copy">og spar penger! Mer enn <%= Rails.configuration.x.view.current_num_ads  %> ting til leie.</p>
     <div>
         <%= form_tag("/search", method: "get") do %>
           <%= text_field_tag 'q', 'skiboks', class: 'front-search-block__input' %>
