--- a/app/assets/stylesheets/_front_search_block.scss
+++ b/app/assets/stylesheets/_front_search_block.scss
@@ -33,9 +33,44 @@
         justify-content: center;
         align-content: stretch;
         align-items: center;
+        position: relative;
+        border: solid 1px #ccc;
 
         @media screen and (max-width: 640px) {
             margin: 2px;
+        }
+
+        // Fancy shadow effect thingy
+        &:before, &:after
+        {
+          z-index: -1;
+          position: absolute;
+          content: "";
+          bottom: 15px;
+          left: 10px;
+          width: 50%;
+          top: 80%;
+          max-width:300px;
+          background: #777;
+          -webkit-box-shadow: 0 15px 10px #777;
+          -moz-box-shadow: 0 15px 10px #777;
+          box-shadow: 0 15px 10px #777;
+          -webkit-transform: rotate(-3deg);
+          -moz-transform: rotate(-3deg);
+          -o-transform: rotate(-3deg);
+          -ms-transform: rotate(-3deg);
+          transform: rotate(-3deg);
+        }
+
+        &:after
+        {
+          -webkit-transform: rotate(3deg);
+          -moz-transform: rotate(3deg);
+          -o-transform: rotate(3deg);
+          -ms-transform: rotate(3deg);
+          transform: rotate(3deg);
+          right: 10px;
+          left: auto;
         }
     }
 
