Nicer styling for image list

--- a/app/assets/stylesheets/_constants.scss
+++ b/app/assets/stylesheets/_constants.scss
@@ -11,6 +11,7 @@ $color-gray-text: #454649;
 $color-gray-background: #d4d4d4; // rgb(212,212,212);
 $color-subtle-gray-background: #dee1df;
 
+$color-button-delete: #be0027;
 $color-button-good: #36b984;
 $color-button-bad: #c20400;
 $color-button-neutral: #8f8989;
