WIP kalendae integration

--- a/app/views/shared/_booking_period_selector.html.erb
+++ b/app/views/shared/_booking_period_selector.html.erb
@@ -12,6 +12,10 @@
         <%= render partial: "shared/month_calendar", locals: { date: third_month, ad: ad } %>
     </div>
 
+    <div data-controller="kalendaeBookingSelector">
+        LAL
+    </div>
+
     <details>
         <summary>Skriv inn datoer manuelt</summary>
         <div>
